<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:stretchColumns="0,1"
    tools:context=".MainMenu">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <Button
            android:text="@string/accelerometer"
            android:drawableTop="@drawable/accelero_icon"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="accelerometer_activity"/>
        <Button
            android:text="@string/magnetic_field"
            android:drawableTop="@drawable/icon_magnet"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="magnet_activity"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <Button
            android:text="@string/proximity"
            android:drawableTop="@drawable/icon_proximity"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="proximity_activity"/>
        <Button
            android:text="@string/light"
            android:drawableTop="@drawable/icon_light"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="light_activity"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <Button
            android:text="@string/orientation"
            android:drawableTop="@drawable/icon_orientation"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="orientation_activity"/>
        <Button
            android:text="@string/gyroscope"
            android:drawableTop="@drawable/icon_orientation"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="gyroscope_activity"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <Button
            android:text="@string/GPS"
            android:drawableTop="@drawable/icon_orientation"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="gps_activity"/>
    </TableRow>
</TableLayout>
